# agentanycast-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  llms.txt  pyproject.toml  server.json  smithery.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
npm/: README.md  package.json
src/agentanycast_mcp/: __init__.py  __main__.py  proxy.py
tests/: test_cli.py  test_init.py  test_proxy.py  test_proxy_integration.py
